# papa-lang

./: .coverage  .env.publish.example  .gitignore  .papa-evolve-analysis.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  MANIFEST.md  Makefile  PUBLISH.md  README.md  SPEC.md  papa.py  papa.toml  pytest.ini  repl.py
data/: marketplace_registry.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PITCH.md  RUST_STRATEGY.md  SPECIFICATION.md
ecosystem/: mcp-security.papa
examples/: 01_hello.papa  02_safety.papa  03_functions.papa  04_server.papa  05_full_demo.papa  06_server.papa  07_imports.papa  08_async.papa  09_models.papa  10_stdlib.papa  11_packages.papa  15_v07_features.papa  ai_agent.papa  ai_hello.papa  api_server.pl  arrays.papa  deploy_demo.papa  error_handling.papa  full_stack.pl  hello.pl  match_demo.pl  match_simple.pl  math.papa  papa_server.pl  strings.papa  test_ai.pl  test_cache.pl  test_db.pl  types.papa  utils.papa  v15_features.pl
lib/: cli_evolve.py  evolve_engine.py
marketplace/: registry.json
scripts/: publish_all.sh  publish_with_env.sh
showcase/: 06_voice_agent.papa  07_mcp_integration.papa  08_browser_scraping.papa  09_telegram_bot.papa  10_cost_guardrails.papa  11_design_system.papa  12_orchestrator_safety.papa  13_orchestrator_autoverify.papa  14_design_3ai.papa  15_docs.papa  16_studio.papa  17_cwb_assistant.papa  blockchain_demo.papa  gemini_demo.papa  guard_demo.papa  swarm_demo.papa  test_enterprise.papa  test_revolutionary.papa  vericoding_demo.papa  wave2_wave3_demo.papa
src/: __init__.py  ast_nodes.py  environment.py  evaluator.py  (+14 more)
(+84 files in other folders)
