[package]
name = "papa-lang"
version = "0.1.0"
edition = "2021"
description = "PAPA Lang — AI-native programming language"

[[bin]]
name = "pl"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Runtime engines
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.16"
base64 = "0.22"
rand = "0.8"
lazy_static = "1.4"

[dev-dependencies]
# assert_cmd = "2"
# predicates = "3"
# tempfile = "3"
